fix: mobile account address overflow

--- a/src/views/pages/account/account.styl
+++ b/src/views/pages/account/account.styl
@@ -79,6 +79,7 @@
   padding 16px
   font-weight 600
   position relative
+  overflow-wrap break-word
 
 .account__balance
   display flex
@@ -119,8 +120,3 @@
     font-size 14px
     margin-bottom 16px
     line-height 1.5
-
-@media (max-width 500px)
-  .account__address
-    overflow-wrap anywhere
-    min-width 150px
